--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-spring": "^8.0.27",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
