--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-intl": "^5.10.16",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
     "typescript": "^4.0.3",
