--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@types/react": "^16.9.53",
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.7",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.2",
     "react-intl": "^5.10.16",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
     "typescript": "^4.0.3",
